--- a/witz.html
+++ b/witz.html
@@ -30,11 +30,11 @@
     <!-- Stylesheets
     ================================================== -->
     <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link href="assets/css/responsive.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <link href="responsive.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -107,18 +107,18 @@
         </div>
         <div class="box2">
         
-           <img height="824" width="622" src="assets/img/witz1b.png" alt="" class="responsive">
+           <img height="824" width="622" src="witz1b.png" alt="" class="responsive">
         </div>
     </div>
     <div >
-     <img class="stopimg" width="1300" height="50" src="assets/img/stop.png" alt=""  >
+     <img class="stopimg" width="1300" height="50" src="stop.png" alt=""  >
     </div>
 
     <div>
-        <img width="722" height="1024" src="assets/img/witz2.png" alt="" class="center">
+        <img width="722" height="1024" src="witz2.png" alt="" class="center">
     </div>
     <div>
-        <img width="722" height="1024" src="assets/img/witz3.png" alt="" class="center">
+        <img width="722" height="1024" src="witz3.png" alt="" class="center">
     </div>
 
 
@@ -155,12 +155,12 @@
     ================================================== -->
     <!-- Placed at the end of the document so the AKTUELL load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/bootstrap-select.min.js"></script>
-    <script src="assets/js/jquery.slicknav.min.js"></script>
-    <script src="assets/js/jquery.countTo.min.js"></script>
-    <script src="assets/js/jquery.shuffle.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="bootstrap.min.js"></script>
+    <script src="bootstrap-select.min.js"></script>
+    <script src="jquery.slicknav.min.js"></script>
+    <script src="jquery.countTo.min.js"></script>
+    <script src="jquery.shuffle.min.js"></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
